# 10.1_begin

./: .flake8  README.md  pyproject.toml
src/: generators.py  masks.py  widget.py
tests/: tests.py
