[tool.poetry]
name = "pythonproject5"
version = "0.1.0"
description = ""
authors = ["Natalia Yaiceedka"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.lint.dependencies]
mypy = "^1.9.0"
black = "^24.3.0"
flake8 = "^7.0.0"
isort = "5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
